--- a/ReminderWebApp/Pages/Index.cshtml
+++ b/ReminderWebApp/Pages/Index.cshtml
@@ -13,6 +13,7 @@
 		  content="width=device-width,
 				initial-scale=1.0">
 	<link rel="stylesheet" href="~/css/calendar.css" asp-append-version="true" />
+	<link rel="stylesheet" href="~/css/todothing.css" asp-append-version="true" />
 </head>
 
 	@section Sidebar {
