--- a/ReminderWebApp/Pages/EditToDoThing.cshtml
+++ b/ReminderWebApp/Pages/EditToDoThing.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{id:int}"
-@model ReminderWebApp.Pages.ChangeToDoThingModel
+@model ReminderWebApp.Pages.EditToDoThingModel
 @{
 }
 
@@ -9,6 +9,6 @@
     <textarea asp-for="ToDoThing.Description"></textarea>
     <button type="submit">Сохранить</button>
 </form>
-<button asp-page="/ToDoThing" asp-route-Id="ToDoThing.Id">
+<a asp-page="/ToDoThing" asp-route-Id="@Model.ToDoThing.Id">
     Отмена
-</button>
+</a>
