--- a/ReminderWebApp/Pages/Index.cshtml
+++ b/ReminderWebApp/Pages/Index.cshtml
@@ -32,6 +32,7 @@
             <input asp-for="Input.Time" />
             <input asp-for="Input.Title" />
             <textarea asp-for="Input.Description"></textarea>
+            <input type="time" asp-for="Input.RemindTime"/>
             <button class="todothings-button" id="saveToDoThingWindowButtonId"
                     onclick="saveToDoThing()">
                 Сохранить
