--- a/ReminderWebApp/wwwroot/css/modal.css
+++ b/ReminderWebApp/wwwroot/css/modal.css
@@ -16,7 +16,7 @@
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: fit-content; /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
@@ -25,6 +25,7 @@
     float: right;
     font-size: 28px;
     font-weight: bold;
+    width:20px;
 }
 
     .close:hover,
