--- a/ReminderWebApp/Pages/Shared/_Layout.cshtml
+++ b/ReminderWebApp/Pages/Shared/_Layout.cshtml
@@ -22,18 +22,24 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Главная страница</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/AllToDoThings">Все дела</a>
-                        </li>
+                        @if (User?.Identity?.IsAuthenticated ?? false)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/AllToDoThings">Все дела</a>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
     </header>
-    <div class="side-bar">
-        @RenderSection("Sidebar", required: false)
-    </div>
+    @if(User?.Identity?.IsAuthenticated ?? false){
+        <div class="side-bar">
+            @RenderSection("Sidebar", required: false)
+        </div>
+    }
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
